# otus-cpp

./: .travis.yaml  .travis.yml  Doxyfile  READE.md  README.md  ReleasePlan.md  graph_legend.html  index.html
1000/: CMakeLists.txt  main.cpp
1001/: CMakeLists.txt  main.cpp
1014/: CMakeLists.txt  main.cpp
1136/: CMakeLists.txt  main.cpp
1197/: CMakeLists.txt  main.cpp
1264/: CMakeLists.txt  main.cpp
1293/: CMakeLists.txt  main.cpp
1330/: CMakeLists.txt  main.cpp
1409/: CMakeLists.txt  main.cpp
1785/: CMakeLists.txt  main.cpp
1787/: CMakeLists.txt  main.cpp
1820/: CMakeLists.txt  main.cpp
1877/: CMakeLists.txt  main.cpp
1880/: CMakeLists.txt  main.cpp
2001/: CMakeLists.txt  main.cpp
2012/: CMakeLists.txt  main.cpp
2066/: CMakeLists.txt  main.cpp
2100/: CMakeLists.txt  main.cpp
Interface/: SpaceMech.proto
libPicasso/: CMakeLists.txt
libPicasso/include/picasso/: CanvasOpenGL.h  Document.h  ExporterXML.h  ICanvas.h  IExporter.h  IObject.h  ImporterXML.h  Shapes.h  Types.h
libPicasso/source/: CompilationChecker.cpp  Document.cpp  Shapes.cpp
source/: .travis.yml  Allocator.h  CMakeLists.txt  Interfaces.h  Printers.h  SimpleList.h  WeakPointersList.h  autotests.cpp  ip_filter.cpp  lib.cpp  lib.h  main.cpp  matrix.h  print_ip.h  test_version.cpp  version.h.in
